# agent-FORGE

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  README.pt-BR.md  ROADMAP.md  fox-deploy-test.sh  manifesto-operacional-agentes.md  opencode.md  project.yaml  pyproject.toml
docs/: ARCHITECTURE.md  BLUEPRINT.md  FINETUNING-STRATEGY.md  FINETUNING-STRATEGY.pt-BR.md  MODEL-STRATEGY.md  PRD.md  STATUS-agents-framework-vault-pilot.md  TOOL-REGISTRY.md  TOOL-REGISTRY.pt-BR.md
reports/: V6-ACADEMICO-piloto-renomeacao-v3.md  V6-ACADEMICO-piloto-renomeacao-v4.md  V6-ACADEMICO-piloto-renomeacao.md  V6-ACADEMICO-regression-check.md  V6-DOCUMENTOS-piloto-financeiro-dono-v1.md  V6-DOCUMENTOS-piloto-financeiro-v2.md  V6-DOCUMENTOS-piloto-financeiro-v3.md  V6-DOCUMENTOS-piloto-financeiro-v4.md  V6-DOCUMENTOS-piloto-financeiro.md  V6-DOCUMENTOS-piloto-renomeacao.md  V6-FINANCEIRO-amostras.md  V6-FINANCEIRO-final-check.md  V6-FINANCEIRO-refined-test-2.md  V6-FINANCEIRO-refined-test-3.md  V6-FINANCEIRO-refined-test.md  V6-TESTES-move-v1.md  V6-TESTES-piloto-academico-v2.md  V6-TESTES-piloto-dono-heuristica-v2.md  V6-TESTES-piloto-dono-heuristica-v3.md  V6-TESTES-piloto-pasta-sugerida.md  V6-TESTES-piloto-v1.md
scripts/: README.md  bootstrap_vault_pilot.sh  bootstrap_vault_pilot_tools.sh  extrair_amostras_financeiro.sh  file_extractor.py  run_benchmark_eval.py  run_v1_benchmark.py  run_v2_benchmark.py  run_v3_benchmark.py  run_v4_benchmark_summary.py  run_v5_path_benchmark.py  translate_to_english.sh  v6_vault_saneamento_piloto.py
(+202 files in other folders)
