[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-framework"
version = "0.1.0"
description = "Framework experimental para agentes LLM on-prem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.31",
  "psutil>=5.9",
  "fastapi>=0.111",
  "uvicorn>=0.29",
  "mcp>=1.0",
]

[project.scripts]
agentforge = "agentforge.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
